--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,31 @@
 {
-    "extends": ["prettier", "airbnb-base"],
-    "parserOptions": {
-      "ecmaVersion": 12
-    },
-    "env": {
-      "commonjs": true,
-      "node": true
-    },
-    "rules": {
-      "no-console": 0,
-      "indent": 0,
-      "linebreak-style": 0,
-      "prettier/prettier": [
-        "error",
-        {
-          "trailingComma": "es5",
-          "singleQuote": true,
-          "printWidth": 100,
-          "tabWidth": 4,
-          "semi": true
-        }
-      ]
-    },
-    "plugins": ["prettier"]
-  }
+  "extends": ["airbnb", "eslint:recommended", "prettier"],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 8
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true,
+    "jest": true
+  },
+  "rules": {
+    "no-console": "off",
+    "indent": 0,
+    "linebreak-style": 0,
+
+    "prettier/prettier": [
+      "error",
+      {
+        "trailingComma": "es5",
+        "singleQuote": true,
+        "printWidth": 100,
+        "tabWidth": 4,
+        "semi": true,
+        "endOfLine": "auto"
+      }
+    ]
+  },
+  "plugins": ["prettier", "react", "react-hooks"]
+}
